1.修改线程池 2.使用双重检查保证HttpHelper的初始化的线程安全 3.优化Request的构造方式，默认Post请求 4.优化gradle项目结构

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,9 @@ def cfg = rootProject.ext.android
 def librarys = rootProject.ext.Dependencies
 
 android {
+
     compileSdkVersion cfg.compileSdkVersion
     buildToolsVersion cfg.buildToolsVersion
-    enforceUniquePackageName = false
     defaultConfig {
         applicationId cfg.applicationId
         minSdkVersion cfg.minSdkVersion
@@ -20,14 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile librarys["V7"]
-    compile librarys["constraint"]
-    compile librarys["junit"]
-    compile librarys["test"]
-    compile librarys["espresso"]
+    librarys.each { k, v -> compile v }
     compile project(':helper')
 }
