--- a/helper/build.gradle
+++ b/helper/build.gradle
@@ -20,17 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile librarys["V7"]
-    compile librarys["constraint"]
-    compile librarys["junit"]
-    compile librarys["test"]
-    compile librarys["test"]
-    compile librarys["gson"]
-    compile librarys["okhttp-urlconnection"]
-    compile librarys["kprogresshud"]
+    librarys.each { k, v -> compile v }
+
 }
 
